[package]
name = "rsdd"
version = "0.1.0"
authors = ["Matt Wang <matt@matthewwang.me>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml = {git = "https://github.com/zshipko/ocaml-rs"}
rsdd = { git = "https://github.com/minsungc/rsdd-dappl", rev = "4953d3ab9ff6dad0191afa44380fbbbd2f353a8f" }

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}
