[package]
name = "rsdd"
version = "0.1.0"
authors = ["Matt Wang <matt@matthewwang.me>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml = {git = "https://github.com/zshipko/ocaml-rs"}
rsdd = { git = "https://github.com/minsungc/rsdd-dappl", rev = "14d521b7d17d5003a6d111753a01fe314099432d" }

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}
