[package]
name = "rsdd"
version = "0.1.0"
authors = ["Matt Wang <matt@matthewwang.me>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml = {git = "https://github.com/zshipko/ocaml-rs"}
rsdd = { git = "https://github.com/minsungc/rsdd-dappl", rev = "43816ddc9aadb96606fc10bf2d33cfe7e3f018d5" }

[build-dependencies]
ocaml-build = {version = "^1.0.0-beta"}
